# vidbits

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py
backend/app/models/: job.py  segment.py
backend/app/pipelines/: analyze.py  download.py  edit.py  highlight.py  publish.py  transcribe.py
backend/app/reframe/: face_tracker.py
backend/app/subtitle/: ass_generator.py
backend/app/templates/: clean.json  gaming.json  podcast.json
backend/tests/: test_ass_generator.py  test_face_tracker.py  test_ffmpeg_strings.py  test_highlight_scorer.py  test_integration.py  test_llm_provider.py
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...route]/: route.ts
frontend/app/jobs/[id]/: page.tsx
frontend/components/: ClipPreview.tsx  JobStatus.tsx  JobSubmit.tsx  PublishPanel.tsx
