[project]
name = "vidbits"
version = "0.1.0"
description = "AI-powered video clipping pipeline — YouTube links to viral Shorts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.22",
    "yt-dlp>=2024.12.0",
    "faster-whisper>=1.1.0",
    "httpx>=0.27.0",
    "scenedetect>=0.6.2",
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.0",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.136.0",
    "ruff>=0.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
